dimagi-SalesforceFB/src/objects/Time_Card__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Area_Category__c</fullName>
        <description>Maps Areas under Project: Business Development and Project; BD Work</description>
        <formula>IF(CONTAINS(Area__c ,&quot;BD Enablement&quot;),&quot;BD Enablement&quot;,

IF(CONTAINS(Area__c ,&quot;Calls&quot;),&quot;Misc&quot;,

IF(CONTAINS(Area__c ,&quot;Contact &amp; Account Mgmt&quot;),&quot;Contact Mgmt&quot;,

IF(CONTAINS(Area__c ,&quot;Email&quot;),&quot;Misc&quot;,

IF(CONTAINS(Area__c ,&quot;Internal Meetings&quot;),&quot;Internal Meetings&quot;,

IF(CONTAINS(Area__c ,&quot;Internal Misc&quot;),&quot;Misc&quot;,

IF(CONTAINS(Area__c ,&quot;Lead Gen &amp; Mgmt&quot;),&quot;Lead Mgmt&quot;,

IF(CONTAINS(Area__c ,&quot;Meetings&quot;),&quot;Internal Meetings&quot;,

IF(CONTAINS(Area__c ,&quot;Misc&quot;),&quot;Misc&quot;,

IF(CONTAINS(Area__c ,&quot;Opportunity Mgmt - Innovation&quot;),&quot;Opp Mgmt - Competitive Bid&quot;, 

IF(CONTAINS(Area__c ,&quot;Opportunity Mgmt - RFP&quot;),&quot;Opp Mgmt - Competitive Bid&quot;,

IF(CONTAINS(Area__c ,&quot;Opportunity Mgmt - Competitive Bid&quot;),&quot;Opp Mgmt - Competitive Bid&quot;, 

IF(CONTAINS(Area__c ,&quot;Opportunity Mgmt - Pre-Bid&quot;),&quot;Opp Mgmt - Pre-Bid&quot;,

IF(CONTAINS(Area__c ,&quot;Opportunity Execution - RFP&quot;),&quot;Opp Mgmt - Competitive Bid&quot;, 

IF(CONTAINS(Area__c ,&quot;Partnerships &amp; Resellers&quot;),&quot;Contact Mgmt&quot;,

IF(CONTAINS(Area__c ,&quot;Opportunity Mgmt - B2B&quot;),&quot;Opp Mgmt - B2B&quot;,

IF(CONTAINS(Area__c ,&quot;Stage 1 - Connect&quot;),&quot;Contact Mgmt&quot;,

IF(CONTAINS(Area__c ,&quot;Stage 2 - Talking&quot;),&quot;Contact Mgmt&quot;,

IF(CONTAINS(Area__c ,&quot;Stage 3 - Prospect&quot;),&quot;Contact Mgmt&quot;,

IF(CONTAINS(Area__c ,&quot;Stage 4 - Proposal Development&quot;),&quot;Opp Mgmt - Misc&quot;,

IF(CONTAINS(Area__c ,&quot;Stage 5 - Submitted&quot;),&quot;Opp Mgmt - Misc&quot;,

IF(CONTAINS(Area__c ,&quot;Stage 6 - In Negotiations&quot;),&quot;Opp Mgmt - Misc&quot;,

IF(CONTAINS(Area__c ,&quot;Closed - Won&quot;),&quot;Opp Mgmt - Misc&quot;,

IF(CONTAINS(Area__c ,&quot;Closed - Lost&quot;),&quot;Opp Mgmt - Misc&quot;,

IF(CONTAINS(Area__c ,&quot;Closed - No Go&quot;),&quot;Opp Mgmt - Misc&quot;,

IF(CONTAINS(Area__c ,&quot;Contract Negotiations&quot;),&quot;Opp Mgmt - Misc&quot;,

&quot;ERROR&quot;))))))))))))))))))))))))))</formula>
        <label>BD Area Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Category__c</fullName>
        <description>Maps FB Clients to a Client Category</description>
        <formula>IF(CONTAINS(Client__r.Name,&quot;Overhead&quot;),&quot;Overhead&quot;,

IF(CONTAINS(Client__r.Name,&quot;Comms&quot;)||CONTAINS(Client__r.Name,&quot;Marketing&quot;),&quot;Comms &amp; Marketing&quot;,

IF(CONTAINS(Client__r.Name,&quot;Business Development&quot;),&quot;Business Development&quot;,

IF(CONTAINS(Client__r.Name,&quot;Operations&quot;)||CONTAINS(Client__r.Name,&quot;Internal:Product Ops&quot;),&quot;Operations&quot;,

IF(CONTAINS(Client__r.Name,&quot;Internal:&quot;),&quot;Internal Initiative&quot;,

IF(CONTAINS(Client__r.Name,&quot;Product:&quot;),&quot;Product&quot;,

&quot;Client&quot;))))))</formula>
        <label>Client Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>DContract__c</referenceTo>
        <relationshipLabel>Time Cards</relationshipLabel>
        <relationshipName>Time_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Time Cards</relationshipLabel>
        <relationshipName>Time_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Pulls the month from Date__c</description>
        <formula>MONTH (Date__c)</formula>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <description>Hours divided by 8 to get days</description>
        <formula>Total__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <inlineHelpText>Total Hours</inlineHelpText>
        <label>Total Hours</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>labor_cost__c</fullName>
        <description>Total hours * employee daily loaded rate</description>
        <formula>Total__c * Employee__r.Loaded_Daily_Rate__c / 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>labor cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Time Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Date__c</columns>
        <columns>Employee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Time Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>